# django-api-example

./: Pipfile  README.md  pyproject.toml
api/: .env.example  postman_collection.json  settings.py  urls.py
api/v1/: serializer.py  urls.py  views.py
